# src/main/java/be/howest/ti/mars/webserver/WebServer.java
@@ -146,6 +146,7 @@ public class WebServer extends AbstractVerticle {
         addRouteWithCtxFunction(factory, "createOrder", bridge::createOrder);
         addRouteWithCtxFunction(factory, "getOrderById", bridge::getOrderById);
         addRouteWithCtxFunction(factory, "getRockets", bridge::getRockets);
+        addRouteWithCtxFunction(factory, "getUserId", bridge::getUserId);
     }
 
     private void addRouteWithCtxFunction(OpenAPI3RouterFactory factory, String operationId,
